_sass/rootvariables.scss
:root{

    // Colors that will not change in the dark mode.
    --color-white:#fff;

    --color-primary-light:#fff;
    --color-primary-medium:#f8f9fa;
    --color-primary-dark:#f1f3f5;
    --color-secondary-light:#495057;
    --color-secondary-medium:#343a40;
    --color-secondary-dark:#212529;
    --color-grey-light:#868e96;

    --box-shadow-primary:3px 3px 10px rgba( 134, 142, 150,  .8);


    --image-color: brightness(15%);
    --image-filter-light: invert(27%) sepia(34%) saturate(217%) hue-rotate(154deg) brightness(92%) contrast(95%);
    --image-filter-dark:brightness(40) invert(1);

    --logo-filter:brightness(100%) invert(0);

    --background-primary:linear-gradient(250deg, #477e96 0%, #00b39f 35%, rgb(60, 73, 79) 100%);
    --background-primary-2:linear-gradient(100deg, #477e96 0%, #00b39f 35%, #5a6f79 100%);
    --background-light: linear-gradient(to right top, #fff, #fff);
    --background-light-cards: linear-gradient(to left bottom, #f1f3f5, #f4f5f7, #f7f7f9, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff, #f7f7f9, #f4f5f7, #f1f3f5);
    --background-grey: linear-gradient(to right bottom, #dee2e6, #d2d7dc, #c5cbd1, #b9c0c7, #adb5bd);
    --background-grey-secondary:linear-gradient(to right top, #868e96, #767e86, #676e76, #585f66, #495057);



}

.dark-mode{
    --color-primary-light:#212529;
    --color-primary-medium:#343a40;
    --color-primary-dark:#495057;
    --color-secondary-light:#fff;
    --color-secondary-medium:#f1f3f5;
    --color-secondary-dark:#f1f3f5;
    --color-grey-light:#adb5bd;

    --box-shadow-primary:4px 4px 8px rgba(0, 0, 0, 1);
    // --box-shadow-primary:4px 4px 8px rgba(255, 255, 255, 0.4);

    
    --background-light:linear-gradient(to right top, #3d3d3d, #343434, #2b2b2b, #222222, #1a1a1a, #181818, #161616, #141414, #181818, #1c1c1c, #212121, #252525);
    --background-grey:linear-gradient(to right top, #868e96, #767e86, #676e76, #585f66, #495057);
    --background-grey-secondary:linear-gradient(to right bottom, #dee2e6, #d2d7dc, #c5cbd1, #b9c0c7, #adb5bd);
    --background-light-cards:linear-gradient(to right top, #3d3d3d, #343434, #2b2b2b, #222222, #1a1a1a, #181818, #161616, #141414, #181818, #1c1c1c, #212121, #252525);



    --image-color: brightness(0) invert(1);
    --image-filter-light:brightness(40) invert(1);
    --image-filter-dark:invert(27%) sepia(34%) saturate(217%) hue-rotate(154deg) brightness(92%) contrast(95%);
    --logo-filter:brightness(0) invert(1);
}

